tests/saws/fixtures/invalid/07_empty_column_name.saws
"",age,name
"x",30,"Alice"
